# SimpleChat

./: .gitignore  CMakeLists.txt  Makefile  README.md  chatapp  chatapp.pro  mainwindow.cpp  mainwindow.h  moc_mainwindow.cpp
client/: chatclient.cpp  chatclient.h  main.cpp
client/gui/: AboutWindow.cpp  AboutWindow.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h
server/: database.cpp  database.h  main.cpp  server.cpp  server.h
shared/: message.h
tests/: test_client.cpp  test_database.cpp  test_message.cpp  test_server.cpp
